# anki-sagashi

./: README.md  pyproject.toml
src/anki_sagashi/: anki.py  cli.py  filters.py  input.py  report.py  tokenizer.py
src/anki_sagashi/data/: jlpt.json  stopwords.json
tests/: test_anki.py  test_input.py  test_tokenizer.py
