[project]
name = "anki-sagashi"
version = "0.1.0"
description = "A CLI tool that mines Japanese text for vocabulary gaps against your Anki deck"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "fugashi[unidic-lite]>=1.3",
    "rich>=13.0",
]

[project.scripts]
anki-sagashi = "anki_sagashi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_sagashi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]
